--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -27,7 +27,7 @@
         <div id="wz-menu" class="d-none">
             @* TODO: (mw) (dt) Localization!!!!!!!!!!!!!!!!!! *@
             <button class="wz-toggle btn btn-dark btn-outline-light" data-persistent="true"><i class="far fa-eye"></i><span>Persistent toggle</span></button>
-            <div class="wz-zone-list d-flex flex-column flex-grow-1 overflow-auto custom-scrollbar custom-scrollbar-invert"></div>
+            <div class="wz-zone-list d-flex flex-column flex-grow-1 overflow-auto mr-n2 custom-scrollbar custom-scrollbar-invert"></div>
             <button class="wz-toggle btn btn-dark btn-outline-light">Toggle<span class="small text-muted">Ctrl + Alt + B</span></button>
 
             @* TODO: (mw) (dt) Put a sticky buttonbar to the bottom with 3 justified items (equal width and height, similar to the product list item action bar): Persistent toggle, Temp toggle, Close offcanvas. Remove the 3 shitty buttons. *@
