Enabled offcanvas in admin area

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -35,7 +35,8 @@
 }
 
 <div id="page">
-    <div class="page-main">
+    <div class="canvas-blocker canvas-slidable"></div>
+    <div class="page-main canvas-slidable">
         <header id="header">
             <zone name="header" replace-content="true">
                 <zone name="admin_navbar_before" preview-class="position-absolute"></zone>
