.toggle-pwd-group for proper input padding

--- a/src/Smartstore.Web/wwwroot/shared/_forms.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_forms.scss
@@ -208,6 +208,14 @@ fieldset.content-group {
 // Toggle password visibility
 // ------------------------------------------------------
 
+.toggle-pwd-group {
+    position: relative;
+
+    > .form-control {
+        padding-inline-end: 2rem;
+    }
+}
+
 .btn-toggle-pwd {
     position: absolute;
     cursor: pointer;
