DevTools: put offcanvas script to admin bundle

--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -17,8 +17,8 @@
     if (zone.Name == "start")
     {
         // Add the offcanvas zone preview menu
-        <a id="wz-menu-toggle" class="position-fixed top-0 end-0 m-2 mt-6 btn btn-dark" href="#" data-toggle="offcanvas" 
-            data-autohide="true" data-blocker="false" data-placement="end" data-fullscreen="false" data-target="#wz-menu">
+        <a id="wz-menu-toggle" class="position-fixed top-0 end-0 m-2 mt-6 btn btn-dark" href="#" data-toggle="offcanvas"
+           data-autohide="true" data-blocker="false" data-placement="end" data-fullscreen="false" data-slide="false" data-target="#wz-menu">
             <i class="far fa-layer-group"></i>
         </a>
         <aside id="wz-menu" class="offcanvas offcanvas-end offcanvas-shadow">
@@ -134,5 +134,3 @@ else
         });
     });
 </script>
-
-<script src="~/js/smartstore.offcanvas.js" sm-target-zone="scripts"></script>
